Remove license checking mechanism from tests (unsupported in 8.x)